Package_Tools/include-C/gnutls/inarbeit/fertig/pkcs11.pp


function gnutls_pkcs11_obj_get_ptr(obj:Tgnutls_pkcs11_obj_t; ptr:Ppointer; session:Ppointer; ohandle:Ppointer; slot_id:Pdword; 
           flags:dword):longint;cdecl;external;
function gnutls_pkcs11_obj_get_info(obj:Tgnutls_pkcs11_obj_t; itype:Tgnutls_pkcs11_obj_info_t; output:pointer; output_size:Psize_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_obj_set_info(obj:Tgnutls_pkcs11_obj_t; itype:Tgnutls_pkcs11_obj_info_t; data:pointer; data_size:Tsize_t; flags:dword):longint;cdecl;external;
const
  GNUTLS_PKCS11_OBJ_ATTR_CRT_ALL = GNUTLS_PKCS11_OBJ_FLAG_CRT;  
{ always match the given URL  }
  GNUTLS_PKCS11_OBJ_ATTR_MATCH = 0;  
{ match everything!  }
  GNUTLS_PKCS11_OBJ_ATTR_ALL = 0;  
  GNUTLS_PKCS11_OBJ_ATTR_CRT_TRUSTED = GNUTLS_PKCS11_OBJ_FLAG_CRT or GNUTLS_PKCS11_OBJ_FLAG_MARK_TRUSTED;  
  GNUTLS_PKCS11_OBJ_ATTR_CRT_WITH_PRIVKEY = GNUTLS_PKCS11_OBJ_FLAG_CRT or GNUTLS_PKCS11_OBJ_FLAG_WITH_PRIVKEY;  
  GNUTLS_PKCS11_OBJ_ATTR_CRT_TRUSTED_CA = (GNUTLS_PKCS11_OBJ_FLAG_CRT or GNUTLS_PKCS11_OBJ_FLAG_MARK_CA) or GNUTLS_PKCS11_OBJ_FLAG_MARK_TRUSTED;  
  GNUTLS_PKCS11_OBJ_ATTR_PUBKEY = GNUTLS_PKCS11_OBJ_FLAG_PUBKEY;  
  GNUTLS_PKCS11_OBJ_ATTR_PRIVKEY = GNUTLS_PKCS11_OBJ_FLAG_PRIVKEY;  
{*
 * gnutls_pkcs11_token_info_t:
 * @GNUTLS_PKCS11_TOKEN_LABEL: The token's label (string)
 * @GNUTLS_PKCS11_TOKEN_SERIAL: The token's serial number (string)
 * @GNUTLS_PKCS11_TOKEN_MANUFACTURER: The token's manufacturer (string)
 * @GNUTLS_PKCS11_TOKEN_MODEL: The token's model (string)
 * @GNUTLS_PKCS11_TOKEN_MODNAME: The token's module name (string - since 3.4.3). This value is
 *   unavailable for providers which were manually loaded.
 *
 * Enumeration of types for retrieving token information.
  }
type
  Pgnutls_pkcs11_token_info_t = ^Tgnutls_pkcs11_token_info_t;
  Tgnutls_pkcs11_token_info_t =  Longint;
  Const
    GNUTLS_PKCS11_TOKEN_LABEL = 0;
    GNUTLS_PKCS11_TOKEN_SERIAL = 1;
    GNUTLS_PKCS11_TOKEN_MANUFACTURER = 2;
    GNUTLS_PKCS11_TOKEN_MODEL = 3;
    GNUTLS_PKCS11_TOKEN_MODNAME = 4;
;
{*
 * gnutls_pkcs11_obj_type_t:
 * @GNUTLS_PKCS11_OBJ_UNKNOWN: Unknown PKCS11 object.
 * @GNUTLS_PKCS11_OBJ_X509_CRT: X.509 certificate.
 * @GNUTLS_PKCS11_OBJ_PUBKEY: Public key.
 * @GNUTLS_PKCS11_OBJ_PRIVKEY: Private key.
 * @GNUTLS_PKCS11_OBJ_SECRET_KEY: Secret key.
 * @GNUTLS_PKCS11_OBJ_DATA: Data object.
 * @GNUTLS_PKCS11_OBJ_X509_CRT_EXTENSION: X.509 certificate extension (supported by p11-kit trust module only).
 *
 * Enumeration of object types.
  }
type
  Pgnutls_pkcs11_obj_type_t = ^Tgnutls_pkcs11_obj_type_t;
  Tgnutls_pkcs11_obj_type_t =  Longint;
  Const
    GNUTLS_PKCS11_OBJ_UNKNOWN = 0;
    GNUTLS_PKCS11_OBJ_X509_CRT = 1;
    GNUTLS_PKCS11_OBJ_PUBKEY = 2;
    GNUTLS_PKCS11_OBJ_PRIVKEY = 3;
    GNUTLS_PKCS11_OBJ_SECRET_KEY = 4;
    GNUTLS_PKCS11_OBJ_DATA = 5;
    GNUTLS_PKCS11_OBJ_X509_CRT_EXTENSION = 6;
;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)

function gnutls_pkcs11_token_init(token_url:Pchar; so_pin:Pchar; _label:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_token_get_ptr(url:Pchar; ptr:Ppointer; slot_id:Pdword; flags:dword):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_token_get_mechanism(url:Pchar; idx:dword; mechanism:Pdword):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_token_check_mechanism(url:Pchar; mechanism:dword; ptr:pointer; psize:dword; flags:dword):dword;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{gnutls_pin_flag_t  }function gnutls_pkcs11_token_set_pin(token_url:Pchar; oldpin:Pchar; newpin:Pchar; flags:dword):longint;cdecl;external;
function gnutls_pkcs11_token_get_url(seq:dword; detailed:Tgnutls_pkcs11_url_type_t; url:PPchar):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_token_get_info(url:Pchar; ttype:Tgnutls_pkcs11_token_info_t; output:pointer; output_size:Psize_t):longint;cdecl;external;
const
  GNUTLS_PKCS11_TOKEN_HW = 1;  
{ p11-kit trusted  }
  GNUTLS_PKCS11_TOKEN_TRUSTED = 1 shl 1;  
{ CKF_RNG  }
  GNUTLS_PKCS11_TOKEN_RNG = 1 shl 2;  
{ CKF_LOGIN_REQUIRED  }
  GNUTLS_PKCS11_TOKEN_LOGIN_REQUIRED = 1 shl 3;  
{ CKF_PROTECTED_AUTHENTICATION_PATH  }
  GNUTLS_PKCS11_TOKEN_PROTECTED_AUTHENTICATION_PATH = 1 shl 4;  
{ CKF_TOKEN_INITIALIZED  }
  GNUTLS_PKCS11_TOKEN_INITIALIZED = 1 shl 5;  
{ CKF_USER_PIN_COUNT_LOW  }
  GNUTLS_PKCS11_TOKEN_USER_PIN_COUNT_LOW = 1 shl 6;  
{ CKF_USER_PIN_FINAL_TRY  }
  GNUTLS_PKCS11_TOKEN_USER_PIN_FINAL_TRY = 1 shl 7;  
{ CKF_USER_PIN_LOCKED  }
  GNUTLS_PKCS11_TOKEN_USER_PIN_LOCKED = 1 shl 8;  
{ CKF_SO_PIN_COUNT_LOW  }
  GNUTLS_PKCS11_TOKEN_SO_PIN_COUNT_LOW = 1 shl 9;  
{ CKF_SO_PIN_FINAL_TRY  }
  GNUTLS_PKCS11_TOKEN_SO_PIN_FINAL_TRY = 1 shl 10;  
{ CKF_SO_PIN_LOCKED  }
  GNUTLS_PKCS11_TOKEN_SO_PIN_LOCKED = 1 shl 11;  
{ CKF_USER_PIN_INITIALIZED  }
  GNUTLS_PKCS11_TOKEN_USER_PIN_INITIALIZED = 1 shl 12;  
{ CKF_ERROR_STATE  }
  GNUTLS_PKCS11_TOKEN_ERROR_STATE = 1 shl 13;  
(* Const before type ignored *)

function gnutls_pkcs11_token_get_flags(url:Pchar; flags:Pdword):longint;cdecl;external;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_obj_list_import_url(p_list,n_list,url,attrs,flags : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_obj_list_import_url2(p_list,n_list,url,attrs,flags : longint) : longint;

(* Const before declarator ignored *)
(* Const before type ignored *)
{ GNUTLS_PKCS11_OBJ_FLAG_*  }
function gnutls_pkcs11_obj_list_import_url3(p_list:Pgnutls_pkcs11_obj_t; n_list:Pdword; url:Pchar; flags:dword):longint;cdecl;external;
(* Const before type ignored *)
{ GNUTLS_PKCS11_OBJ_FLAG_*  }
function gnutls_pkcs11_obj_list_import_url4(p_list:PPgnutls_pkcs11_obj_t; n_list:Pdword; url:Pchar; flags:dword):longint;cdecl;external;
function gnutls_x509_crt_import_pkcs11(crt:Tgnutls_x509_crt_t; pkcs11_crt:Tgnutls_pkcs11_obj_t):longint;cdecl;external;
function gnutls_pkcs11_obj_get_type(obj:Tgnutls_pkcs11_obj_t):Tgnutls_pkcs11_obj_type_t;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_type_get_name(_type:Tgnutls_pkcs11_obj_type_t):Pchar;cdecl;external;
function gnutls_pkcs11_obj_get_exts(obj:Tgnutls_pkcs11_obj_t; exts:PPgnutls_x509_ext_st; exts_size:Pdword; flags:dword):longint;cdecl;external;
function gnutls_pkcs11_obj_get_flags(obj:Tgnutls_pkcs11_obj_t; oflags:Pdword):longint;cdecl;external;
function gnutls_pkcs11_obj_flags_get_str(flags:dword):Pchar;cdecl;external;
(* Const before declarator ignored *)
{ must be zero  }function gnutls_x509_crt_list_import_pkcs11(certs:Pgnutls_x509_crt_t; cert_max:dword; objs:Pgnutls_pkcs11_obj_t; flags:dword):longint;cdecl;external;
{ private key functions... }
function gnutls_pkcs11_privkey_init(key:Pgnutls_pkcs11_privkey_t):longint;cdecl;external;
function gnutls_pkcs11_privkey_cpy(dst:Tgnutls_pkcs11_privkey_t; src:Tgnutls_pkcs11_privkey_t):longint;cdecl;external;
procedure gnutls_pkcs11_privkey_set_pin_function(key:Tgnutls_pkcs11_privkey_t; fn:Tgnutls_pin_callback_t; userdata:pointer);cdecl;external;
procedure gnutls_pkcs11_privkey_deinit(key:Tgnutls_pkcs11_privkey_t);cdecl;external;
function gnutls_pkcs11_privkey_get_pk_algorithm(key:Tgnutls_pkcs11_privkey_t; bits:Pdword):longint;cdecl;external;
function gnutls_pkcs11_privkey_get_info(pkey:Tgnutls_pkcs11_privkey_t; itype:Tgnutls_pkcs11_obj_info_t; output:pointer; output_size:Psize_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_privkey_import_url(pkey:Tgnutls_pkcs11_privkey_t; url:Pchar; flags:dword):longint;cdecl;external;
function gnutls_pkcs11_privkey_export_url(key:Tgnutls_pkcs11_privkey_t; detailed:Tgnutls_pkcs11_url_type_t; url:PPchar):longint;cdecl;external;
function gnutls_pkcs11_privkey_status(key:Tgnutls_pkcs11_privkey_t):dword;cdecl;external;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_privkey_generate(url,pk,bits,_label,flags : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_privkey_generate2(url,pk,bits,_label,fmt,pubkey,flags : longint) : longint;

(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_pkcs11_privkey_generate3(url:Pchar; pk:Tgnutls_pk_algorithm_t; bits:dword; _label:Pchar; cid:Pgnutls_datum_t; 
           fmt:Tgnutls_x509_crt_fmt_t; pubkey:Pgnutls_datum_t; key_usage:dword; flags:dword):longint;cdecl;external;
function gnutls_pkcs11_privkey_export_pubkey(pkey:Tgnutls_pkcs11_privkey_t; fmt:Tgnutls_x509_crt_fmt_t; pubkey:Pgnutls_datum_t; flags:dword):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_pkcs11_token_get_random(token_url:Pchar; data:pointer; len:Tsize_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_pkcs11_copy_attached_extension(token_url:Pchar; crt:Tgnutls_x509_crt_t; data:Pgnutls_datum_t; _label:Pchar; flags:dword):longint;cdecl;external;
const
  gnutls_x509_crt_import_pkcs11_url = gnutls_x509_crt_import_url;  
{ C++ end of extern C conditionnal removed }
{$endif}
{ GNUTLS_PKCS11_H  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_copy_x509_crt(url,crt,_label,flags : longint) : longint;
begin
  gnutls_pkcs11_copy_x509_crt:=gnutls_pkcs11_copy_x509_crt2(url,crt,_label,NULL,flags);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_copy_x509_privkey(url,key,_label,usage,flags : longint) : longint;
begin
  gnutls_pkcs11_copy_x509_privkey:=gnutls_pkcs11_copy_x509_privkey2(url,key,_label,NULL,usage,flags);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_obj_list_import_url(p_list,n_list,url,attrs,flags : longint) : longint;
begin
  gnutls_pkcs11_obj_list_import_url:=gnutls_pkcs11_obj_list_import_url3(p_list,n_list,url,attrs or flags);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_obj_list_import_url2(p_list,n_list,url,attrs,flags : longint) : longint;
begin
  gnutls_pkcs11_obj_list_import_url2:=gnutls_pkcs11_obj_list_import_url4(p_list,n_list,url,attrs or flags);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_privkey_generate(url,pk,bits,_label,flags : longint) : longint;
begin
  gnutls_pkcs11_privkey_generate:=gnutls_pkcs11_privkey_generate3(url,pk,bits,_label,NULL,0,NULL,0,flags);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gnutls_pkcs11_privkey_generate2(url,pk,bits,_label,fmt,pubkey,flags : longint) : longint;
begin
  gnutls_pkcs11_privkey_generate2:=gnutls_pkcs11_privkey_generate3(url,pk,bits,_label,NULL,fmt,pubkey,0,flags);
end;


end.
